# frontend-co2

./: .gitignore  Makefile  README.md  load.py  main.py  pyproject.toml
data/: domains.csv  macbookpro-i5-2.3ghz-16gb-2017.csv
src/: load.py  main.py
