[tool.poetry]
name = "frontend-carbon"
version = "0.1.0"
description = ""
authors = ["Owen Barton <owen@owenbarton.com>"]
license = "GPL-3"
readme = "README.md"
packages = [{include = "frontend_carbon"}]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.32.1"
pantomime = "^0.6.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
